// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonCard renders as disabled 1`] = `
.emotion-0 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
  background-color: var(--themeBgDisabled, #E8EAED);
  color: var(--themeTextColorDisabled, #AEB0B4);
  cursor: auto;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-0:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-0,
.emotion-0:hover,
.emotion-0:focus {
  box-shadow: 0 0 0 0 transparent;
}

.emotion-1 {
  padding: 16px;
  height: 100%;
}

<ButtonCard
  disabled={true}
  paddingSize="m"
>
  <div
    aria-disabled={true}
    className="emotion-0"
    data-cy="buttonCard"
    onKeyPress={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="emotion-1"
    >
      default
    </div>
  </div>
</ButtonCard>
`;

exports[`ButtonCard renders as hasFocus 1`] = `
.emotion-0 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-0:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-1 {
  padding: 16px;
  height: 100%;
}

<ButtonCard
  hasFocus={true}
  paddingSize="m"
>
  <div
    className="emotion-0"
    data-cy="buttonCard"
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="emotion-1"
    >
      default
    </div>
  </div>
</ButtonCard>
`;

exports[`ButtonCard renders as isActive 1`] = `
.emotion-0 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-0:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-0,
.emotion-0:hover,
.emotion-0:focus {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-0:focus {
  background-color: var(--themeBgHover, #F7F8F9);
}

.emotion-1 {
  padding: 16px;
  height: 100%;
}

<ButtonCard
  isActive={true}
  paddingSize="m"
>
  <div
    aria-pressed={true}
    className="emotion-0"
    data-cy="buttonCard"
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="emotion-1"
    >
      default
    </div>
  </div>
</ButtonCard>
`;

exports[`ButtonCard renders default 1`] = `
.emotion-0 {
  background-color: var(--themeBgPrimary, #FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder, #DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary, #7D58FF);
  outline: 0;
}

.emotion-0:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary, #7D58FF);
}

.emotion-1 {
  padding: 16px;
  height: 100%;
}

<ButtonCard
  paddingSize="m"
>
  <div
    className="emotion-0"
    data-cy="buttonCard"
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="emotion-1"
    >
      default
    </div>
  </div>
</ButtonCard>
`;
